[gd_scene load_steps=3 format=3 uid="uid://ddc5shd0x54a4"]

[ext_resource type="Script" path="res://house_yaga_space/content/ui/pause.gd" id="1_k56qa"]
[ext_resource type="Theme" uid="uid://qe2wkjg65iy6" path="res://house_yaga_space/resource/ui/theme_pause.tres" id="2_14vpo"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k56qa")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -187.0
offset_right = 236.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_14vpo")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = 6.0
offset_right = -71.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ButtonResume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "ВЕРНУТЬСЯ"

[node name="ButtonOptions" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "ОПЦИИ"

[node name="ButtonExit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "ЗАКОНЧИТЬ ПОЛЕТ"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -95.5
offset_top = 24.0
offset_right = 95.5
offset_bottom = 108.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 61
text = "ПАУЗА"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonResume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
